fix scrollbar in chat and fixed few bugs

--- a/client/src/components/UIElements/modal/modal.css
+++ b/client/src/components/UIElements/modal/modal.css
@@ -12,15 +12,6 @@
   z-index: 1;
 }
 
-.modal-background {
-  /* background: #1b2430;
-  width: 50%;
-  min-width: 30rem;
-  max-width: 50rem;
-  height: 50%;
-  border-radius: 6px;
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; */
-}
 .modal-overlay .modal-container {
   animation-name: modalAnimation;
   animation-duration: 0.3s;
@@ -31,7 +22,7 @@
   background: var(--primary-background-color);
   border-radius: 6px;
   padding: 2rem 3rem;
-  /* position: fixed; */
+  min-height: 10rem; /* position: fixed; */
   position: absolute;
   top: 50%;
   left: 50%;
